Fixed image border gaps
+ Fixed visible gaps between home page panel images and their borders

--- a/css/scss/homepage.scss
+++ b/css/scss/homepage.scss
@@ -1,4 +1,5 @@
 @use 'common';
+$border-color: #121212;
 
 h1 {
 	font-size: 55px;
@@ -21,12 +22,14 @@ header {
 .panel {
 	position: relative;
 	margin-bottom: 5px;
+	// box-sizing: border-box;
 }
 .panel img {
 	width: 100%;
-	/* height: 100%; messes with .aboutme-overlay */
-	border: 3px solid #121212;
-	border-radius: 2.5px 3px 1.75px;
+	background-color: $border-color;
+	border: 2.75px solid $border-color;
+	-webkit-border-radius: 2.5px;
+	border-radius: 2.5px;
 }
 .overlay {
 	position: absolute;
@@ -198,8 +201,6 @@ header {
 		}
 		to {
 			opacity: 1;
-			//the ending "top:" value changes based on viewport, 
-			//so this animation uses the max value and lets the element self-correct after the animation ends
 			bottom: 20px;
 		}
 	}
